# chromasky-backend

./: .gitignore  README.md  UPDATE.md  check_data_time.py  debug_grib.py  download_aod_forecast.py  download_historical_data.py  download_latest_cloud_forecast.py  draw_historical_map.py  draw_historical_map_with_aod.py  draw_score_map.py  main.py  pyproject.toml  scheduler.py  scheduler_aod.py  获取云底高.py  获取云边界距离.py
ai/: 1.md
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: chromasky.py
app/assets/: china_cities.csv
app/core/: config.py  download_config.py
app/models/: sun_events.py
app/services/: astronomy_service.py  chromasky_calculator.py  data_fetcher.py  grib_downloader.py
app/tasks/: __init__.py  cams_tasks.py  gfs_tasks.py  processing_tasks.py  task_utils.py  worker_tasks.py
frontend/: index.html
tools/: download_map_data.py  grib_analyzer.py  grib_to_map.py  map_drawer.py
