[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[project]
name = "chromasky-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.2",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.6",
    "cfgrib>=0.9.15.0",
    "dask>=2025.7.0",
    "ecmwf-api-client>=1.6.5",
    "ephem>=4.2",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "metpy>=1.7.0",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "uvicorn>=0.35.0",
    "xarray>=2025.7.1",
]
